<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/gift_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gift_label"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/edit_gift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:hint="@string/edit_gift_hint"
        android:inputType="textCapWords" />

    <TextView
        android:id="@+id/recipient_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipient_label"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/edit_recipient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:hint="@string/edit_recipient_hint"
        android:inputType="textCapSentences" />

    <Button
        android:text="@string/enter_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:id="@+id/enter_button" />

    <TextView
        android:id="@+id/shopping_list_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shopping_list_label"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/shopping_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="24sp" />

</LinearLayout>
